src/app/messages/messages.module.css
/* messages.module.css */
.container {
  padding: 50px;
  border-radius: 15px;
}

.header {
  font-size: 24px;
  font-weight: bold;
  color: #333;
}

.unread {
  color: #6c757d;
  margin-bottom: 16px;
}

.topBar {
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin-bottom: 10px;
}

.tabContainer {
  display: flex;
  gap: 10px;
}

.tab {
  background: none;
  border: none;
  font-size: 16px;
  cursor: pointer;
  padding: 10px 20px;
  border-radius: 10px;
  transition: background-color 0.3s;
}

.activeTab {
  background-color: #596334;
  color: white;
}

.newMessageButton {
  background-color: #e57300;
  color: white;
  border: none;
  padding: 10px 16px;
  border-radius: 20px;
  cursor: pointer;
  font-weight: bold;
  display: flex;
  align-items: center;
  gap: 5px;
}

.newMessageButton:hover {
  background-color: #d17b1f;
}

.table {
  border-radius: 15px;
  width: 50%;
  border-collapse: separate;
  margin-top: 10px;
  background: white;
  overflow: hidden;
}

.tableHeader {
  border-top-left-radius: 15px;
  border-top-right-radius: 15px;
  background: #dfed98;
}

.table th {
  background: transparent;
  padding: 15px;
  text-align: left;
}

.table td {
  padding: 10px;
  border-bottom: 1px solid #ddd;
}

.avatarContainer {
  display: flex;
  align-items: center;
  gap: 8px;
}

.menuButton {
  background: none;
  border: none;
  cursor: pointer;
  opacity: 1;
}

.sentMessage {
  color: #555;
  font-size: 16px;
  margin-top: 10px;
}

.fadedText {
  opacity: 0.5;
}

.pageControls {
  display: flex;
  justify-content: center;
  margin-top: 20px;
  gap: 10px;
}

.pageButton {
  background-color: #ffffff;
  color: #323131;
  border: none;
  padding: 8px 12px;
  border-radius: 30px !important;
  cursor: pointer;
}

.pageButton:hover {
  background-color: #83924f !important;
}

.activePage {
  background-color: #596334 !important;
  color: white !important;
  border-radius: 30px !important;
}

.sentMessage {
  text-align: center;
  font-size: 18px;
  color: #555;
  margin-top: 20px;
}

.messageTable {
  border-radius: 15px;
  width: 45%;
  border-collapse: collapse;
  margin-top: 10px;
  background: white;
  min-height: 550px;
}

.messageHeader {
  border-top-right-radius: 15px;
  border-top-left-radius: 15px;
  background-color: #596334;
  padding: 25px;
}

.messageHeader h3 {
  font-stretch: expanded;
  font-weight: bolder;
  color: white;
  text-align: text-top;
}

.messageHeader p {
  color: white;
  text-align: text-top;
}

.messageBody p {
  margin-top: 50px;
  margin-left: 12px;
}

.messageBody h1 {
  margin-top: 20px;
  margin-right: 5px;
  text-align: right;
}

.mainContent {
  display: flex;
  flex-direction: row;
  gap: 2rem;
  align-items: flex-start;
}

.clickableRow:hover {
  cursor: pointer;
  background-color: #f0f0f0;
  transition: background-color 0.2s;
}

